fix: change style to prevent content shifting

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -5,3 +5,8 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+html {
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+}
